--- a/listening_report.html
+++ b/listening_report.html
@@ -41,7 +41,7 @@ th{position:sticky;top:0;background:#fff;color:var(--accent);font-weight:700;}
 
 <body>
 <div class="wrap">
-  <h1 style="margin:0;color:var(--accent);font-size:22px;font-weight:700;">Listening Report</h1>
+  <h1 style="margin:0;color:var(--accent);font-size:22px;font-weight:700;">SEA Assessment Updates</h1>
 
   <div class="panel">
     <strong style="color:var(--muted);">Month</strong>
@@ -62,7 +62,7 @@ th{position:sticky;top:0;background:#fff;color:var(--accent);font-weight:700;}
     <div class="table-wrap" id="tableMount"></div>
   </div>
 
-  <small style="display:block;margin-top:12px;color:var(--muted);font-weight:600;">Generated: 2025-12-22 12:02</small>
+  <small style="display:block;margin-top:12px;color:var(--muted);font-weight:600;">Generated: 2025-12-22 13:10</small>
 </div>
 
 <script type="application/json" id="reportData">
@@ -134,12 +134,12 @@ th{position:sticky;top:0;background:#fff;color:var(--accent);font-weight:700;}
 
   // ---- CEMD palette + consistent TYPE->COLOR mapping ----
   const CEMD = {
-    primary: "#29264B",
+    primary: "#04B1DC",
     carbon:  "#414042",
-    orchid:  "#7C3AED",
-    mango:   "#F59E0B",
-    teal:    "#0EA5A4",
-    slate:   "#64748B"
+    orchid:  "#7570A2",
+    mango:   "#F2692A",
+    teal:    "#128DAC",
+    slate:   "#29264B"
   };
 
   const BASE_COLORS = [CEMD.primary, CEMD.teal, CEMD.mango, CEMD.orchid, CEMD.slate, CEMD.carbon];
